Refactor validation.py and add new semantic uplift steps
Squashed commit of the following:

commit a51f6ffc02a69a91e7dd32c81067bfbdaed81126
Author: Alejandro Villar <avillar@ogc.org>
Date:   Tue Jul 30 11:52:40 2024 +0200

    Only write output if tests were run

    Simplify report output

commit 466f781044382eaa131a6bdbb14cea17911b2e84
Author: Alejandro Villar <avillar@ogc.org>
Date:   Thu Jul 25 12:07:54 2024 +0200

    Add base URL to semanticUplift.additionalSteps

commit e304512b85ac9f9466a4466a10b79da8d68c6f50
Author: Alejandro Villar <avillar@ogc.org>
Date:   Thu Jul 25 12:02:26 2024 +0200

    Add stage to uplift output

commit 7fed9045949d52352bd6aa0d1a800a43d53e5bdd
Author: Alejandro Villar <avillar@ogc.org>
Date:   Tue Jul 23 09:59:40 2024 +0200

    Additional semantic uplift steps

commit 917eb7f7f1465526be697c6659a737f38e1c562d
Author: Alejandro Villar <avillar@ogc.org>
Date:   Mon Jul 22 12:58:04 2024 +0200

    WIP additional semantic uplift steps

commit 854644e09cb3842abbee73acbebb0365728b10b9
Author: Alejandro Villar <avillar@ogc.org>
Date:   Thu Jul 18 12:52:16 2024 +0200

    Refactor validate into several modules

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests~=2.31.0
 pyparsing~=3.0.9
 pyshacl~=0.21.0
 # Includes rdflib fixes
-rdflib @ git+https://github.com/avillar/rdflib.git@6.x
+rdflib @ git+https://github.com/avillar/rdflib.git@6.x#egg=rdflib
 jsonref~=1.1.0
 networkx~=3.1
 jq~=1.6
