Normalize mime types for validation. RDF/XML support

--- a/ogc/bblocks/known-mimetypes.yaml
+++ b/ogc/bblocks/known-mimetypes.yaml
@@ -36,3 +36,12 @@ xml:
     - application/xml
   extensions:
     - xml
+
+yaml:
+  label: YAML
+  mimeType: application/x-yaml
+  aliases:
+    - text/yaml
+  extensions:
+    - yaml
+    - yml
