--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pyyaml~=6.0
 Mako~=1.2.4
 jsonschema==4.17.3
 ogc-na @ git+https://github.com/opengeospatial/ogc-na-tools@main#egg=ogc-na
-requests~=2.31.0
+requests~=2.32.0,>=2.32.0
 pyparsing~=3.0.9
 pyshacl~=0.21.0
 # Includes rdflib fixes
