--- a/.github/workflows/validate-and-process.yml
+++ b/.github/workflows/validate-and-process.yml
@@ -245,3 +245,9 @@ jobs:
         if: ${{ github.event.repository.has_pages && !inputs.skip-pages }}
         id: deployment
         uses: actions/deploy-pages@v4
+  upload-to-triplestore:
+    needs: validate-and-process
+    uses: ./.github/workflows/upload-to-triplestore.yml
+    with:
+      config_file: ${{ inputs.config_file }}
+      register_file: ${{ inputs.register_file }}
