Change SHACL "rules" to "shapes"
All metadata properties and references are changed.
Legacy "shaclRules" and "rules.shacl" are still supported
as input, but only "shaclShapes" will be generated in the output.

--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -92,7 +92,7 @@ context:
       '@id': prof:isProfileOf
       '@type': '@id'
     tags: dcat:keyword
-    shaclRules:
+    shaclShapes:
       '@id': bblocks:hasShaclRule
       '@type': '@id'
       '@container': '@index'
